<resources>

    <string name="app_name">In dormitory</string>

    <!--For Qr code button-->
    <string name="go_button">GO</string>

    <!--For shopping cart -->
    <string name="shopping_cart_label">Shopping cart</string>
    <string name="empty_cart">Your cart is empty.</string>
    <string name="empty_go_back"> <u> Please buy smth. </u> </string>
    <string name="buy_button">BUY</string>
    <string name="buy_at_time_button">buy at time</string>
    <string name="under_button_hint">you can reserve a table </string>
    <string name="Under_button_redirect"> <u> here </u> </string>

    <!--For add button-->
    <string name="add_button">add</string>

    <!--For activity item menu-->
    <string name="ingredients_title">Ingredients</string>
    <string name="method_of_cooking_title">Information</string>
    <string name="add_button_toast">Added</string>

    <!--For login -->
    <string name="login_title">Login</string>
    <string name="login_button_label">Sign in</string>
    <string name="do_not_have_account">Doesn`t have account?</string>
    <string name="register_now"> <u> Register now! </u> </string>
    <string name="login_by">Login by</string>
    <string name="fail_login_toast">Authentication failed</string>

    <!-- For Register -->
    <string name="register_title">Register</string>
    <string name="register_user_name">name</string>
    <string name="register_phone_number">phone number</string>
    <string name="register_password">password</string>
    <string name="register_verify_password">verify password</string>
    <string name="register_button_label">Sign up</string>
    <string name="register_privacy_policy">Privacy Policy</string>
    <string name="register_email">email</string>

    <!--For Reservation-->
    <string name="free_seat_title">free seat</string>
    <string name="reserved_seat_title">reserved seat</string>
    <string name="busy_seat_title">busy seat</string>
    <string name="reserve_at">Reserved at</string>
    <string name="reserve_alert_hint">you can reserve it before this time or after 3 hours</string>
    <string name="reserve_button">reserve</string>
    <string name="reserve_hint">pay for reservation</string>
    <string name="reserve_and_buy_button">reserve and buy</string>
    <string name="reserve_buy_hint">reserve table and buy smth</string>
    <string name="busy_from">Busy from</string>
    <string name="by">by</string>
    <string name="busy_table_hint">please choose another table</string>


    <!-- For navigation menu -->
    <string name="reservation">Reservation</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="buy">Menu</string>
    <string name="scan">Scan</string>


    <!-- For search -->
    <string name="search_hint">Search here…</string>


    <!-- Error messages -->
    <string name="empty_field_error">"This field cannot be blank !!!"</string>
    <string name="email_not_valid">"Email is not valid!"</string>
    <string name="incorrect_password_error">"Incorrect password. At least 6 symbols!"</string>
    <string name="name_not_valid">Enter correct name!</string>
    <string name="phone_not_valid">Enter correct phone number</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>


    <!-- For scan -->
    <string name="nothing_to_show">Nothing to show</string>


    <!-- For profile -->
    <string name="table_number">table N</string>
    <string name="current_order_button">current order</string>
    <string name="change_reservation_button">change reservation</string>
    <string name="orders_history_button">orders history</string>
    <string name="settings_title">Settings</string>
    <string name="mail_change_button">Change e-mail</string>
    <string name="phone_change_button">Change phone number</string>
    <string name="change_password_button">Change password</string>
    <string name="logout_button">log out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="order_made">Order was made at</string>


    <!-- Facebook -->
    <string name="facebook_application_id">2007738229475178</string>
    <string name="fb_login_protocol_scheme">fb2007738229475178</string>

    <string name="client_id">24620607921-4nuqsej8kr16mpam7gad3uehsaf0mr37.apps.googleusercontent.com</string>

</resources>
