<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/login_title"
            />

        <EditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:text="@string/login_button_label"
            android:textAllCaps="false"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/do_not_have_account"
            android:textSize="20sp"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>