<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="15dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/modal_window_background_reserved_table"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageButton
            android:layout_gravity="right"
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/delete_item_cart"
            android:background="@android:color/transparent"
            android:scaleType="center"
            />

        <TextView
            android:id="@+id/table_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Table N 1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#f5f5f5"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/table_in_circle"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:src="@drawable/table"
            android:layout_marginTop="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve_at"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#f5f5f5"
                />

            <TextView
                android:id="@+id/time_reserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18:00"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="#f5f5f5"
                android:paddingHorizontal="5dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/reserve_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_button"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#FFC724"
            android:background="@drawable/modal_window_background"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="-2dp"
                android:textColor="#f45f5f"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve_alert_hint"
                android:textSize="10sp"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>