<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f5f5f5">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorMenuActive"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:id="@+id/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back"
                    tools:ignore="ContentDescription"
                    android:padding="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#ffffff"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true">
                <ImageButton
                    android:id="@+id/toolbar_shopping_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shopping_cart_empty"
                    android:background="@android:color/transparent"
                    android:padding="15dp"
                    tools:ignore="ContentDescription"/>
                <ImageButton
                    android:id="@+id/toolbar_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:src="@drawable/profile"
                    android:padding="15dp"
                    tools:ignore="ContentDescription"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:orientation="vertical">

            <TimePicker
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="80dp"
                android:addStatesFromChildren="false"
                android:alwaysDrawnWithCache="false"
                android:theme="@style/spinner"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/buy_at_time_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_buy_default"
                android:text="@string/buy_button"
                android:textColor="@color/colorMenuActive"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-2dp"
                    android:text="*"
                    android:textColor="#f45f5f" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/under_button_hint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/go_to_reservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:text="@string/Under_button_redirect"
                    android:textColor="@color/colorMenuActive"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4" />
        <fragment
            android:id="@+id/navigation_menu_fragment"
            class="com.example.indormitory.NavigationMenuFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

</LinearLayout>
